// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Project overview Reducer should handle add project overview data  1`] = `
Object {
  "error": null,
  "event": undefined,
  "form": Object {
    "authorizedBy": "",
    "authorizedByHop": "",
    "authorizedBySecond": "",
    "authorizedByThird": "",
    "budget": 1,
    "cdmNotifiable": false,
    "commenceDate": "2019-12-17T11:22:25.498Z",
    "comments": "",
    "completionDate": "2019-12-17T11:22:25.498Z",
    "creditCheckResult": "",
    "enquiryReceivedFrom": "",
    "enquiryTypeId": -1,
    "finalAccountDate": "2019-12-17T11:22:25.498Z",
    "firstValuationDate": "2019-12-17T11:22:25.498Z",
    "formOfContract": "",
    "insurance": "",
    "isProjectLive": false,
    "liquidatedDamages": "",
    "mainContractor": "",
    "milestones": "",
    "otherMainContractor": "",
    "otherPotentialCustomer": "",
    "paymentTerms": "",
    "potentialCustomer": "",
    "projectAddDetailId": "",
    "projectId": "",
    "retention": "",
    "siteAddress": "",
    "valuationIntervals": "",
    "workTypeId": -1,
  },
  "loading": false,
  "notify": 1,
}
`;

exports[`Project overview Reducer should handle bid lost error during change of project status  1`] = `
Object {
  "error": null,
  "event": 3,
  "form": Object {
    "authorizedBy": "",
    "authorizedByHop": "",
    "authorizedBySecond": "",
    "authorizedByThird": "",
    "budget": 1,
    "cdmNotifiable": false,
    "commenceDate": "2019-12-17T11:22:25.498Z",
    "comments": "",
    "completionDate": "2019-12-17T11:22:25.498Z",
    "creditCheckResult": "",
    "enquiryReceivedFrom": "",
    "enquiryTypeId": -1,
    "finalAccountDate": "2019-12-17T11:22:25.498Z",
    "firstValuationDate": "2019-12-17T11:22:25.498Z",
    "formOfContract": "",
    "insurance": "",
    "isProjectLive": false,
    "liquidatedDamages": "",
    "mainContractor": "",
    "milestones": "",
    "otherMainContractor": "",
    "otherPotentialCustomer": "",
    "paymentTerms": "",
    "potentialCustomer": "",
    "projectAddDetailId": "",
    "projectId": "",
    "retention": "",
    "siteAddress": "",
    "valuationIntervals": "",
    "workTypeId": -1,
  },
  "loading": false,
  "notify": 2,
}
`;

exports[`Project overview Reducer should handle bid lost project status change event  1`] = `
Object {
  "error": null,
  "event": 3,
  "form": Object {
    "authorizedBy": "",
    "authorizedByHop": "",
    "authorizedBySecond": "",
    "authorizedByThird": "",
    "budget": 1,
    "cdmNotifiable": false,
    "commenceDate": "2019-12-17T11:22:25.498Z",
    "comments": "",
    "completionDate": "2019-12-17T11:22:25.498Z",
    "creditCheckResult": "",
    "enquiryReceivedFrom": "",
    "enquiryTypeId": -1,
    "finalAccountDate": "2019-12-17T11:22:25.498Z",
    "firstValuationDate": "2019-12-17T11:22:25.498Z",
    "formOfContract": "",
    "insurance": "",
    "isProjectLive": false,
    "liquidatedDamages": "",
    "mainContractor": "",
    "milestones": "",
    "otherMainContractor": "",
    "otherPotentialCustomer": "",
    "paymentTerms": "",
    "potentialCustomer": "",
    "projectAddDetailId": "",
    "projectId": "",
    "retention": "",
    "siteAddress": "",
    "valuationIntervals": "",
    "workTypeId": -1,
  },
  "loading": false,
  "notify": 1,
}
`;

exports[`Project overview Reducer should handle edit  project overview data  1`] = `
Object {
  "error": null,
  "event": undefined,
  "form": Object {
    "authorizedBy": "",
    "authorizedByHop": "",
    "authorizedBySecond": "",
    "authorizedByThird": "",
    "budget": 1,
    "cdmNotifiable": false,
    "commenceDate": "2019-12-17T11:22:25.498Z",
    "comments": "",
    "completionDate": "2019-12-17T11:22:25.498Z",
    "creditCheckResult": "",
    "enquiryReceivedFrom": "",
    "enquiryTypeId": -1,
    "finalAccountDate": "2019-12-17T11:22:25.498Z",
    "firstValuationDate": "2019-12-17T11:22:25.498Z",
    "formOfContract": "",
    "insurance": "",
    "isProjectLive": false,
    "liquidatedDamages": "",
    "mainContractor": "",
    "milestones": "",
    "otherMainContractor": "",
    "otherPotentialCustomer": "",
    "paymentTerms": "",
    "potentialCustomer": "",
    "projectAddDetailId": "",
    "projectId": "",
    "retention": "",
    "siteAddress": "",
    "valuationIntervals": "",
    "workTypeId": -1,
  },
  "loading": false,
  "notify": 1,
}
`;

exports[`Project overview Reducer should handle error while add project overview data  1`] = `
Object {
  "error": undefined,
  "event": 3,
  "form": Object {
    "authorizedBy": "",
    "authorizedByHop": "",
    "authorizedBySecond": "",
    "authorizedByThird": "",
    "budget": 1,
    "cdmNotifiable": false,
    "commenceDate": "2019-12-17T11:22:25.498Z",
    "comments": "",
    "completionDate": "2019-12-17T11:22:25.498Z",
    "creditCheckResult": "",
    "enquiryReceivedFrom": "",
    "enquiryTypeId": -1,
    "finalAccountDate": "2019-12-17T11:22:25.498Z",
    "firstValuationDate": "2019-12-17T11:22:25.498Z",
    "formOfContract": "",
    "insurance": "",
    "isProjectLive": false,
    "liquidatedDamages": "",
    "mainContractor": "",
    "milestones": "",
    "otherMainContractor": "",
    "otherPotentialCustomer": "",
    "paymentTerms": "",
    "potentialCustomer": "",
    "projectAddDetailId": "",
    "projectId": "",
    "retention": "",
    "siteAddress": "",
    "valuationIntervals": "",
    "workTypeId": -1,
  },
  "loading": false,
  "notify": 2,
}
`;

exports[`Project overview Reducer should handle on hold error during change of project status  1`] = `
Object {
  "error": null,
  "event": 3,
  "form": Object {
    "authorizedBy": "",
    "authorizedByHop": "",
    "authorizedBySecond": "",
    "authorizedByThird": "",
    "budget": 1,
    "cdmNotifiable": false,
    "commenceDate": "2019-12-17T11:22:25.498Z",
    "comments": "",
    "completionDate": "2019-12-17T11:22:25.498Z",
    "creditCheckResult": "",
    "enquiryReceivedFrom": "",
    "enquiryTypeId": -1,
    "finalAccountDate": "2019-12-17T11:22:25.498Z",
    "firstValuationDate": "2019-12-17T11:22:25.498Z",
    "formOfContract": "",
    "insurance": "",
    "isProjectLive": false,
    "liquidatedDamages": "",
    "mainContractor": "",
    "milestones": "",
    "otherMainContractor": "",
    "otherPotentialCustomer": "",
    "paymentTerms": "",
    "potentialCustomer": "",
    "projectAddDetailId": "",
    "projectId": "",
    "retention": "",
    "siteAddress": "",
    "valuationIntervals": "",
    "workTypeId": -1,
  },
  "loading": false,
  "notify": 2,
}
`;

exports[`Project overview Reducer should handle on hold project status change event  1`] = `
Object {
  "error": null,
  "event": 3,
  "form": Object {
    "authorizedBy": "",
    "authorizedByHop": "",
    "authorizedBySecond": "",
    "authorizedByThird": "",
    "budget": 1,
    "cdmNotifiable": false,
    "commenceDate": "2019-12-17T11:22:25.498Z",
    "comments": "",
    "completionDate": "2019-12-17T11:22:25.498Z",
    "creditCheckResult": "",
    "enquiryReceivedFrom": "",
    "enquiryTypeId": -1,
    "finalAccountDate": "2019-12-17T11:22:25.498Z",
    "firstValuationDate": "2019-12-17T11:22:25.498Z",
    "formOfContract": "",
    "insurance": "",
    "isProjectLive": false,
    "liquidatedDamages": "",
    "mainContractor": "",
    "milestones": "",
    "otherMainContractor": "",
    "otherPotentialCustomer": "",
    "paymentTerms": "",
    "potentialCustomer": "",
    "projectAddDetailId": "",
    "projectId": "",
    "retention": "",
    "siteAddress": "",
    "valuationIntervals": "",
    "workTypeId": -1,
  },
  "loading": false,
  "notify": 1,
}
`;

exports[`Project overview Reducer should handle reactivate error event  1`] = `
Object {
  "error": null,
  "event": 3,
  "form": Object {
    "authorizedBy": "",
    "authorizedByHop": "",
    "authorizedBySecond": "",
    "authorizedByThird": "",
    "budget": 1,
    "cdmNotifiable": false,
    "commenceDate": "2019-12-17T11:22:25.498Z",
    "comments": "",
    "completionDate": "2019-12-17T11:22:25.498Z",
    "creditCheckResult": "",
    "enquiryReceivedFrom": "",
    "enquiryTypeId": -1,
    "finalAccountDate": "2019-12-17T11:22:25.498Z",
    "firstValuationDate": "2019-12-17T11:22:25.498Z",
    "formOfContract": "",
    "insurance": "",
    "isProjectLive": false,
    "liquidatedDamages": "",
    "mainContractor": "",
    "milestones": "",
    "otherMainContractor": "",
    "otherPotentialCustomer": "",
    "paymentTerms": "",
    "potentialCustomer": "",
    "projectAddDetailId": "",
    "projectId": "",
    "retention": "",
    "siteAddress": "",
    "valuationIntervals": "",
    "workTypeId": -1,
  },
  "loading": false,
  "notify": 2,
}
`;

exports[`Project overview Reducer should handle reactivate project event  1`] = `
Object {
  "error": null,
  "event": 0,
  "form": Object {
    "authorizedBy": "",
    "authorizedByHop": "",
    "authorizedBySecond": "",
    "authorizedByThird": "",
    "budget": 1,
    "cdmNotifiable": false,
    "commenceDate": "2019-12-17T11:22:25.498Z",
    "comments": "",
    "completionDate": "2019-12-17T11:22:25.498Z",
    "creditCheckResult": "",
    "enquiryReceivedFrom": "",
    "enquiryTypeId": -1,
    "finalAccountDate": "2019-12-17T11:22:25.498Z",
    "firstValuationDate": "2019-12-17T11:22:25.498Z",
    "formOfContract": "",
    "insurance": "",
    "isProjectLive": false,
    "liquidatedDamages": "",
    "mainContractor": "",
    "milestones": "",
    "otherMainContractor": "",
    "otherPotentialCustomer": "",
    "paymentTerms": "",
    "potentialCustomer": "",
    "projectAddDetailId": "",
    "projectId": "",
    "retention": "",
    "siteAddress": "",
    "valuationIntervals": "",
    "workTypeId": -1,
  },
  "loading": false,
  "notify": 1,
}
`;
